<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="accessingLoTW">Accessing LoTW&#8230;</string>
    <string name="action_buy_pizza">Buy N1KDO Pizza</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="all">All</string>
    <string name="app_name">LoTW Look</string>
    <string name="bandColumnHeader">Band%s</string>
    <string name="bandTitle">Band</string>
    <string name="begging1">If you find this application useful, you can show your appreciation by buying N1KDO a slice of pizza.</string>
    <string name="begging2">This is an \"in-app\" purchase and is not refundable.</string>
    <string name="begging3">The price goes here.</string>
    <string name="begging3template">The price of %1$s is %2$s.</string>
    <string name="begging4">Once you buy a slice, the \"Buy N1KDO Pizza\" menu option will disappear, and never come back.</string>
    <string name="buyButtonText">Buy N1KDO a Slice of Pizza</string>
    <string name="callsignColumnHeader">Callsign%s</string>
    <string name="callsignTitle">Callsign</string>
    <!-- <string name="cannot_connect_to_lotw">Cannot connect to LoTW</string> -->
    <string name="countryColumnHeader">Country%s</string>
    <string name="countryTitle">Country</string>
    <string name="countyTitle">County</string>
    <string name="creditGrantedTitle">Credit Granted</string>
    <string name="cqZoneTitle">CQ Zone</string>
    <string name="dateTimeTitle">Date/Time</string>
    <string name="detailsTitle">QSO Details</string>
    <string name="dxccTitle">DXCC</string>
    <string name="frequencyTitle">Frequency</string>
    <string name="gridTitle">Grid</string>
    <string name="including">including</string>
    <string name="invalid_missing_credentials">Invalid or Missing Credentials</string>
    <string name="iotaTitle">Iota</string>
    <string name="ituZoneTitle">ITU Zone</string>
    <string name="loginFailed">LoTW login failed, check your account name and password.</string>
    <string name="max_database_entries">Maximum QSLs to keep on device.</string>
    <string name="max_database_entries_notes">This allows you to set how many of your recent QSLs are kept on your device.</string>
    <string name="menu_settings">Settings</string>
    <string name="missingSearchCriteria">You must search for at least one item.</string>
    <string name="modeColumnHeader">Mode%s</string>
    <string name="modeTitle">Mode</string>
    <string name="network_unavailable">Network Unavailable</string>
    <string name="no_new_qsls">No New QSLs</string>
    <string name="pleaseWait">Please Wait&#8230;</string>
    <!-- <string name="qslDateTitle">QSL Date</string> -->
    <string name="qsl_table_header">LoTW QSLs</string>
    <string name="qsoDateColumnHeader">QSO Date%s</string>
    <string name="qsoDateTitle">QSO Date</string>
    <string name="qsoStartTitle">QSO Start Date</string>
    <string name="qsoEndTitle">QSO End Date</string>
    <string name="rxFrequencyTitle">Rx Frequency</string>
    <string name="searchButton">Search</string>
    <string name="searchDateRange">Search Date Range</string>
    <string name="searchDateRangeHint">Check this box to search a range of dates.</string>
    <string name="searchResults">Search Results</string>
    <string name="set_credentials">Set Credentials</string>
    <string name="settings_heading">LoTW Web Site Credentials</string>
    <string name="settings_owncall">Your Callsign</string>
    <string name="settings_owncall_hint">If your LoTW account has more than one call sign associated with it, and you only want to 
        see the QSLs for one call sign, enter that call sign here.  If you only have one call sign associated with your LoTW 
        account, you can leave this blank.  Most users will want to leave this blank.</string>
    <string name="settings_username">Username</string>
    <string name="settings_username_hint">Your LoTW Website Username</string>
    <string name="settings_password">Password</string>
    <string name="settings_password_hint">Your LoTW Website Password</string>
    <string name="settings_update_interval">Update Interval</string>
    <string name="settings_update_interval_notes">How often to check for new QSLs.</string>
    <string name="stateTitle">State</string>
    <string name="title_activity_settings">Settings</string>
    <string name="theirCallHint">Their callsign, or blank</string>
    <string name="theirCallTitle">Their Call</string>
    <string name="workedColumnHeader">Worked%s</string>
    <string name="workedTitle">Worked</string>
    <string name="you_need_to_set_credentials">You need to set up your LoTW Login Credentials.</string>

    <string-array name="update_interval_options">
        <item>Never</item>
        <item>4 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </string-array>
    <string-array name="update_interval_values">
        <item>0</item>
        <item>4</item>
        <item>6</item>
        <item>12</item>
        <item>24</item>
    </string-array>

    <string name="update_interval_default">4</string>

    <string-array name="database_maximum_entries_values">
        <item>50</item>
        <item>100</item>
        <item>200</item>
    </string-array>

    <string name="database_maximum_entries_default">100</string>

    <plurals name="new_qsls">
        <item quantity="one">%d New QSL</item>
        <item quantity="other">%d New QSLs</item>
    </plurals>

</resources>