<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:gravity="fill_vertical"
    android:orientation="vertical"
    tools:context=".SearchActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theirCallTitle" />

    <EditText
        android:id="@+id/theirCallEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/theirCallHint"
        android:inputType="textCapCharacters"
        android:paddingBottom="@dimen/searchBoxVerticalSpacing"
        android:autofillHints="">
    </EditText>

    <CheckBox
        android:id="@+id/searchDateRangeCbx"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/searchBoxVerticalSpacing"
        android:layout_marginTop="@dimen/searchBoxVerticalSpacing"
        android:hint="@string/searchDateRangeHint"
        android:onClick="dateRangeCheckboxClick"
        android:paddingBottom="@dimen/searchBoxVerticalSpacing"
        android:text="@string/searchDateRange" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qsoStartTitle" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qsoEndTitle" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            style="android:buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/searchBoxVerticalSpacing"
            android:visibility="visible" >

            <Button
                android:id="@+id/startDateButton"
                style="android:buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="startDateButtonClicked"
                android:text="" />

            <Button
                android:id="@+id/endDateButton"
                style="android:buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="endDateButtonClicked"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modeTitle" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bandTitle" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/searchBoxVerticalSpacing" >

            <Spinner
                android:id="@+id/modeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/modeTitle" />

            <Spinner
                android:id="@+id/bandSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/bandTitle" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dxccTitle" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/searchBoxVerticalSpacing" >

            <Spinner
                android:id="@+id/dxccSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/dxccTitle" />
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="searchButtonClick"
        android:text="@string/searchButton" />

</LinearLayout>