<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Search, should appear as action button -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/action_search"/>

    <!-- Refresh, should appear as action button -->
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="20"
        android:showAsAction="ifRoom"
        android:title="@string/action_refresh"/>

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="30"
        android:showAsAction="ifRoom"
        android:title="@string/menu_settings"/>
 </menu>